fix tooltip z-index

--- a/less/header.less
+++ b/less/header.less
@@ -152,6 +152,7 @@ header#header{
 			.center-vertical();
 			padding:0px 18px 0 0;
 			position:relative;
+			z-index: 10;
 		}
 		@media @tablet-and-below {
 			display:none;
