--- a/less/tooltips.less
+++ b/less/tooltips.less
@@ -1,4 +1,3 @@
-
 .tooltip{
 
 	// Color of the text and outline and arrow
@@ -7,6 +6,7 @@
 	@tooltip-secondary-color: @global-background-color;
 
 	font-size:15px;
+	z-index: 10;
 
 	.tooltip-inner{
 		color: @tooltip-primary-color;
